Project

General

Profile

Actions

Bug #45239

closed

Adjust RGW socket timeouts

Added by Kyle Bader about 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Or Friedmann
Target version:
-
% Done:

0%

Source:
Tags:
civetweb
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The default request_timeout_ms inherited from civetweb (30s [1]) is more aggressive than the defaults in both boto3 (60s [2]) and aws-java-sdk (50s [3]).

Under the covers request_timeout_ms is a socket timeout (SO_SNDTIMEO/SO_RCVTIMEO).

We should use a default timeout greater than the client side timeouts - perhaps 65 seconds?

It does not appear that there is a beast analog, but it might be sensible for us to set a similar socket timeout with beast RGW.

[1] https://github.com/ceph/ceph/blob/966c050df69bd419596d02f34cc46c036ad60675/doc/radosgw/frontends.rst
[2] https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html
[3] https://docs.aws.amazon.com/AWSJavaSDK/latest/javadoc/constant-values.html
[4] https://www.boost.org/doc/libs/1_70_0/libs/beast/doc/html/beast/using_io/timeouts.html

Actions #1

Updated by Or Friedmann about 4 years ago

  • Assignee set to Or Friedmann
Actions #2

Updated by Or Friedmann almost 4 years ago

Actions #3

Updated by Casey Bodley almost 4 years ago

  • Status changed from New to Fix Under Review
  • Tags set to civetweb
  • Pull request ID set to 34920
Actions #4

Updated by Casey Bodley almost 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF