rgw: increase civetweb request timeout to 65 seconds

Fixes: https://tracker.ceph.com/issues/45239

Signed-off-by: Or Friedmann <ofriedma@redhat.com>